--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "autoprefixer": "^10.4.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.2",
@@ -22,6 +23,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": ">=6",
     "lint-staged": ">=10",
+    "postcss": "^8.4.11",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.4.2"
   },
   "scripts": {
