--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-tailwindcss": "^3.5.0",
     "husky": ">=6",
     "lint-staged": ">=10",
     "postcss": "^8.4.11",
