--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
+    "d3": "^7.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.1.0",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
