--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react-scripts": "5.0.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.7",
+    "@graphql-codegen/typescript-operations": "2.3.4",
+    "@graphql-codegen/typescript-react-apollo": "3.2.10",
     "@types/d3": "^7.1.0",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.40",
@@ -30,14 +34,16 @@
     "lint-staged": ">=10",
     "postcss": "^8.4.11",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "@graphql-codegen/introspection": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint src/ --ext .ts,.tsx",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "generate": "graphql-codegen -r dotenv/config --config codegen.yml"
   },
   "browserslist": {
     "production": [
