--- a/codegen.yml
+++ b/codegen.yml
@@ -10,3 +10,6 @@ generates:
       - "typescript"
       - "typescript-operations"
       - "typescript-react-apollo"
+    config:
+      scalars:
+        URI: string
