Chore: postinstall scripts로 대체
- 의존성 패키지 설치 시 자동으로 generate 명령어 호출

--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "lint": "eslint src/ --ext .ts,.tsx",
     "prepare": "husky install",
     "generate": "graphql-codegen -r dotenv/config --config codegen.yml",
-    "prestart": "yarn generate",
-    "prebuild": "yarn generate"
+    "postinstall": "npm run generate"
   },
   "browserslist": {
     "production": [
